--- a/src/auth_sql/config.prod.yaml
+++ b/src/auth_sql/config.prod.yaml
@@ -10,8 +10,8 @@ server:
 
 data:
   db:
-    url: postgresql+asyncpg://postgres:${POSTGRES_PASSWORD}@db:5432/exampleapp'
-    url_sync: postgresql+psycopg://postgres:${POSTGRES_PASSWORD}@db:5432/exampleapp'
+    url: postgresql+asyncpg://postgres:${POSTGRES_PASSWORD}@db:5432/exampleapp
+    url_sync: postgresql+psycopg://postgres:${POSTGRES_PASSWORD}@db:5432/exampleapp
 
 services:
   auth:
