--- a/src/auth/docker-compose.yml
+++ b/src/auth/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   mongo:
     image: mongo:latest
-    container_name: investapp_auth_mongo
+    container_name: exampleapp_auth_mongo
     environment:
       - MONGO_INITDB_ROOT_USERNAME=mongoadmin
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
@@ -14,8 +14,8 @@ services:
       - 27017:27017    # remove in prod, use only if we want to access from outside of docker
 
   app:
-    image: investapp_auth_api_image:v1
-    container_name: investapp_auth_api
+    image: exampleapp_auth_api_image:v1
+    container_name: exampleapp_auth_api
     environment:
       - APP_MODE=${APP_MODE}
       - APP_SECRET_KEY=${APP_SECRET_KEY}
